add row completed

--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,22 @@ tbody tr:nth-child(odd) {
 tbody tr:hover {
     background-color: #D6EEEE;
 }
+
+thead tr th:first-child {
+    width: 150px
+}
+
+input[type="text"] {
+    width: 160px;
+    padding: 5px;
+}
+
+thead tr th,
+tbody tr td {
+    width: 80px
+}
+
+input[type="number"] {
+    width: 80px;
+    padding: 5px;
+}
