--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,35 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+.container{
+    height: 500px;
+    width: 800px;
+    margin: 30px auto;
+    border-radius: 10px;
+}
+
+table tbody,
+table thead {
+  display: block;
+}
+
+table tbody {
+  overflow: auto;
+  height: 300px;
 }
 
 table {
+    margin-top: 20px;
     text-align: center;
     font-size: 20px;
     border-collapse: collapse;
 }
 
 th {
-    font-size: 25px;
+    font-size: 20px;
 }
 
 thead tr {
@@ -19,11 +38,13 @@ thead tr {
 
 td,
 th {
-    padding: 0.5em;
+    text-align: center;
+    padding: 0.5rem;
     border-collapse: collapse;
 }
 
-tbody td:first-of-type {
+tbody td:first-of-type,
+tbody td:last-of-type{
     text-transform: capitalize;
 }
 
@@ -35,21 +56,36 @@ tbody tr:hover {
     background-color: #D6EEEE;
 }
 
-thead tr th:first-child {
-    width: 150px
+thead tr th:first-child,
+tbody tr td:first-child{
+    width: 200px
 }
 
-input[type="text"] {
-    width: 160px;
-    padding: 5px;
+thead tr th:last-child,
+tbody tr td:last-child{
+    width: 200px
 }
 
 thead tr th,
 tbody tr td {
-    width: 80px
+    width: 100px
+}
+
+input[type="text"] {
+    width: 200px;
+    padding: 5px;
 }
 
 input[type="number"] {
-    width: 80px;
+    width: 100px;
     padding: 5px;
+}
+
+button{
+    width: 100px;
+    border-radius: 10px;
+}
+
+h2{
+    margin: 20px 0px
 }
